--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -3,5 +3,9 @@
   "Перевод": "Перевод",
   "Самая вкусная пицца во вселенной": "самая вкусная пицца во вселенной",
   "Поиск пиццы...": "Поиск пиццы...",
-  "ru": "ru"
+  "ru ": "ру ",
+  "en ": "англ ",
+  "РЕАКТ ПИЦЦА": "РЕАКТ ПИЦЦА",
+  "темная": "темная",
+  "светлая ": "светлая "
 }
