--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,11 +1,11 @@
 {
   "Тестовый пример": "Тестовый пример",
   "Перевод": "Перевод",
-  "Самая вкусная пицца во вселенной": "самая вкусная пицца во вселенной",
   "Поиск пиццы...": "Поиск пиццы...",
-  "ru ": "ру ",
-  "en ": "англ ",
   "РЕАКТ ПИЦЦА": "РЕАКТ ПИЦЦА",
   "темная": "темная",
-  "светлая ": "светлая "
+  "светлая ": "светлая ",
+  "Самая вкусная пицца": "Самая вкусная пицца",
+  "Профиль": "Профиль"
+
 }
