add pages, sidebar

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -8,7 +8,8 @@
   "РЕАКТ ПИЦЦА": "REACT PIZZA",
   "темная": "dark",
   "светлая ": "light ",
-  "Профиль": "Profile"
+  "Профиль": "Profile",
+  "О странице": "About Page"
 }
 
 
