--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -6,6 +6,7 @@
   "темная": "темная",
   "светлая ": "светлая ",
   "Самая вкусная пицца": "Самая вкусная пицца",
-  "Профиль": "Профиль"
+  "Профиль": "Профиль",
+  "О странице": "О странице"
 
 }
